--- a/index.html
+++ b/index.html
@@ -2,7 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/Ick-logo.png" />
+    <!-- fav icon -->
+    <link rel="icon" type="image/x-icon" href="public\basics\favicon_io\favicon.ico">
+    <!-- <link
+      rel="apple-touch-icon-precomposed"
+      sizes="57x57"
+      href="favicon-57.png" 
+    />
+    <link rel="apple-touch-icon" sizes="72x72" href="favicon-72.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="favicon-114.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="favicon-120.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="favicon-144.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="favicon-152.png" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Font Combination 3 
      Header Font: Audiowide 
