--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <!-- fav icon -->
-    <link rel="icon" type="image/x-icon" href="public\basics\favicon_io\favicon.ico">
+    <link rel="icon" type="image/x-icon" href=".\basics\favicon_io\favicon.ico">
     <!-- <link
       rel="apple-touch-icon-precomposed"
       sizes="57x57"
