--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <!-- fav icon -->
-    <link rel="icon" type="image/x-icon" href=".\basics\favicon_io\favicon.ico">
+    <!-- <link rel="icon" type="image/x-icon" href=".\basics\favicon_io\favicon.ico"> -->
+    <link rel="icon" type="image/x-icon" href="/basics/favicon_io/android-chrome-512x512.png">
     <!-- <link
       rel="apple-touch-icon-precomposed"
       sizes="57x57"
