--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <!-- fav icon -->
     <!-- <link rel="icon" type="image/x-icon" href=".\basics\favicon_io\favicon.ico"> -->
-    <link rel="icon" type="image/x-icon" href="/basics/favicon_io/android-chrome-512x512.png">
+    <link rel="icon" type="image/x-icon" href="/basics/hindustan-motorsports.png">
     <!-- <link
       rel="apple-touch-icon-precomposed"
       sizes="57x57"
@@ -34,7 +34,7 @@
       rel="stylesheet"
     />
 
-    <title>indkc.com/</title>
+    <title>hindustanmotorsports.in</title>
   </head>
   <body>
     <div id="root"></div>
