custom scroll bar

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <!-- fav icon -->
-    <!-- <link rel="icon" type="image/x-icon" href=".\basics\favicon_io\favicon.ico"> -->
-    <link rel="icon" type="image/x-icon" href="/basics/hindustan-motorsports.png">
-    <!-- <link
+
+<head>
+  <meta charset="UTF-8" />
+  <!-- fav icon -->
+  <!-- <link rel="icon" type="image/x-icon" href=".\basics\favicon_io\favicon.ico"> -->
+  <link rel="icon" type="image/x-icon" href="/basics/hindustan-motorsports.png">
+  <!-- <link
       rel="apple-touch-icon-precomposed"
       sizes="57x57"
       href="favicon-57.png" 
@@ -15,29 +16,24 @@
     <link rel="apple-touch-icon" sizes="120x120" href="favicon-120.png" />
     <link rel="apple-touch-icon" sizes="144x144" href="favicon-144.png" />
     <link rel="apple-touch-icon" sizes="152x152" href="favicon-152.png" /> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Font Combination 3 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Font Combination 3 
      Header Font: Audiowide 
     Body Font: Teko -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Audiowide&family=Teko:wght@400;500;600&display=swap"
-      rel="stylesheet"
-    />
-    <!-- Roboto  -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
-      rel="stylesheet"
-    />
-    <!-- Montserrat -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Audiowide&family=Montserrat:wght@300;400;500&display=swap"
-      rel="stylesheet"
-    />
+  <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Teko:wght@400;500;600&display=swap"
+    rel="stylesheet" />
+  <!-- Roboto  -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet" />
+  <!-- Montserrat -->
+  <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Montserrat:wght@300;400;500&display=swap"
+    rel="stylesheet" />
 
-    <title>hindustanmotorsports.in</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+  <title>HINDUSTAN MOTOR SPORTS</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
