fix route issues

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <!-- fav icon -->
   <!-- <link rel="icon" type="image/x-icon" href=".\basics\favicon_io\favicon.ico"> -->
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/basics/hindustan-motorsports.png">
   <!-- <link
       rel="apple-touch-icon-precomposed"
       sizes="57x57"
