--- a/index.html
+++ b/index.html
@@ -45,10 +45,13 @@
 
     <title>HINDUSTAN MOTORSPORTS</title>
     <style>
+      body{
+        background-color: black;
+      }
       /* Pre-loader style */
       #preloader {
         position: fixed;
-        top: 0;
+        top: 88px;
         left: 0;
         width: 100%;
         height: 100%;
@@ -71,6 +74,7 @@
         speed="5"
         style="width: 500px; height: 500px"
         loop
+       
         autoplay
       ></dotlottie-player>
     </div>
